# ChangeLog for sys-apps/ucspi-ssl
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/ucspi-ssl/ChangeLog,v 1.37 2015/04/19 04:39:44 idella4 Exp $

*ucspi-ssl-0.94-r1 (19 Apr 2015)

  19 Apr 2015; Ian Delaney <idella4@gentoo.org> +ucspi-ssl-0.94-r1.ebuild,
  +files/ucspi-ssl-0.94-verbose.patch:
  revbump; patch to fix deficit in qmail eclass wrt Bugs #516868 #546992

  14 Apr 2015; Agostino Sarubbo <ago@gentoo.org> ucspi-ssl-0.94.ebuild:
  Stable for ia64, wrt bug #516868

  13 Apr 2015; Agostino Sarubbo <ago@gentoo.org> ucspi-ssl-0.94.ebuild:
  Stable for alpha, wrt bug #516868

  09 Apr 2015; Denis Dupeyron <calchan@gentoo.org> Manifest:
  Fix bad Manifest.

  09 Apr 2015; Agostino Sarubbo <ago@gentoo.org> ucspi-ssl-0.94.ebuild:
  Stable for x86, wrt bug #516868

  09 Apr 2015; Jeroen Roovers <jer@gentoo.org> ucspi-ssl-0.94.ebuild:
  Drop trailing '.' from DESCRIPTION.

  03 Apr 2015; Agostino Sarubbo <ago@gentoo.org> ucspi-ssl-0.94.ebuild:
  Stable for amd64, wrt bug #516868

  03 Apr 2015; Ian Delaney <idella4@gentoo.org> metadata.xml,
  ucspi-ssl-0.94.ebuild:
  set Alex Efros as proxy maintainer in metadata.xml, fix slot issue for dep
  dev-libs/openssl

*ucspi-ssl-0.94 (03 Apr 2015)

  03 Apr 2015; Ian Delaney <idella4@gentoo.org> +ucspi-ssl-0.94.ebuild:
  bump; ebuild preapred by Alex Efros in Bug #516868

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> ucspi-ssl-0.70-r1.ebuild:
  QA: drop trailing '.' from DESCRIPTION

  06 Nov 2012; Ulrich Müller <ulm@gentoo.org> ucspi-ssl-0.70-r1.ebuild:
  Update LICENSE, public domain according to information on HOMEPAGE.

  20 Jul 2011; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer due retirement, bug #118937

  11 Jul 2011; Alexis Ballier <aballier@gentoo.org> ucspi-ssl-0.70-r1.ebuild:
  keyword ~x86-fbsd

  13 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org>
  ucspi-ssl-0.70-r1.ebuild:
  ppc/ppc64 stable wrt #333915
