@@ -10,4 +10,4 @@ RDEPEND=>=dev-libs/openssl-0.9.6g:= sys-apps/ucspi-tcp
 SLOT=0
 SRC_URI=http://www.fehcom.de/ipnet/ucspi-ssl/ucspi-ssl-0.94.tgz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	fixheadtails	c6fd1fc49c9dc11924f28a1406f251a0	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	qmail	9aa474d2def73a95c642872fdca9c014	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	user	f54e098dd38ba1c0847a13e685b87747
-_md5_=eb0f06bb985deb7fa92fcabf89daeb19
+_md5_=92c6e6a8abd4e0ba4a203086c1ce4b9f
