@@ -6,14 +6,14 @@ DIST ucspi-ssl-0.70-ucspitls-0.1.patch 11967 SHA256 90ac703776f7b34949621a24d24e
 DIST ucspi-ssl-0.70.tar.gz 85111 SHA256 8834aaa83a6862457c853818ce829291285043a553d4466671c05663bc580cf5 SHA512 fe2b7d3af8d40dedf07b644638f2d44f6780ae0a7d0b783ac11046738b862c7fa9fcd719ac11424f9c5ffd5de9bb0814ad2ef993c9cfa649dcc49aeacb2e948d WHIRLPOOL 1dad668519acddeea371585863e54e79f0f6c9889453169c52a56fc8036f48239847f9187db91bb7c5359962781a568f89cc3713305a296df87285110bdf5559
 DIST ucspi-ssl-0.94.tgz 112640 SHA256 343c0281269d88650823eb053fe80bf34b81f52c12b895f27534706b983a23b4 SHA512 a2b7fcea0da4c99a02cd0cf9402d59e55309a65031232e8afc9f29134be268c2e385840f5616c2046649a3f421563f1abcb707a8a8e93c7d29e7aef4a368b604 WHIRLPOOL 1ef3f5b447810eab97532b7fabaf94c56ddd0818a51f1149ec31ad2265c8899e90c3cf5c497a1c3570fc83918576abca2103132db3a494181ea2a872590fadb2
 EBUILD ucspi-ssl-0.70-r1.ebuild 1383 SHA256 5d3c9220600351f671ae025400006341efad20e767b09ba2a7f9cfd288b19558 SHA512 c9b48a4ba97d34e3f6b6e4181f240d58717dd6628ff9a8c749ba95c7a1dd44f98bbee4a4254461e665c951c06447cf3ed3164fdae4bcb81c5d26fea185223288 WHIRLPOOL 8b0ea924edfc7468b11f5e3c3408812c4979914fa770ed8f5a123c624c7ebd6a33224fcf639af2318e204518dbe0bdf14d53c364d003fa04818eaeb2973d3c93
-EBUILD ucspi-ssl-0.94-r1.ebuild 1288 SHA256 01ae0d87194325cc6ac5702b471d30977ef3c3369c532709bffc13f62e4ee23b SHA512 8df2dfc3ec21b766ded461b32a0d1fd42f1f3829b176ba1501713f7e01eda2bca1efde60ca36a6396e7ea4e3db28743a14f7e1c3c4fa2acecb7e615f8fda200f WHIRLPOOL 313743af770f42d3e95b43dd9c21041d961e7d9ed468ef48792912860c31067477977a322c619ef18c8d1cfc65fdc34fe3995d6c4a56f830e3c31906454cac0a
+EBUILD ucspi-ssl-0.94-r1.ebuild 1276 SHA256 c72199cfbacdf783fd554cebe9a2e4a1d84944c1d77774e2401c63e13d9551f3 SHA512 5ebb198ed513b1db60bb8d0978fd00d604d64fafba60770bc214092b16e570576ca6f3ec686d3833c58cff04c5b403e0255d1f66daefe34058393c327eaef121 WHIRLPOOL e44db41e7344247f89bac191f96dbae20367d41c2ab2bb8bade3ff5a756fdfd35f5c494b383c430e269e7c633d6b7c1c3d12c9c23010115f1490c173c7a8de2f
 EBUILD ucspi-ssl-0.94.ebuild 1198 SHA256 f2b602a767ecb79e85eca2be5324e25013dec9c959d7326a1cb80415ca3785ef SHA512 dab203530fe4ecb8f4d104cbd88b67213a906a1e47f1c95f825d0c2b94a378c55780934bb3529bdfe1dfa7b7e6f23f99c784546a30ae073145368ae533cfe0ba WHIRLPOOL 669362014c5c04acc03125a9579de6731d44f1daad306df8daee74b8141cd5f660a0dcf2ce5c8f3d93d15b97a64ccbcb9e82e7b412ebc0ffe6fbf6e6d5e82510
-MISC ChangeLog 4686 SHA256 4031eff656170202490d2c3d9ff6aa5bcaa78505ac57d1c84a2179d83383c739 SHA512 02117777873a3690ee738472999984c35008172fcbb531354ebeaceba2e8c54ee48bb1916301c98b8076c7919cb247f2f4fee7b2fd886ccea57082ae0daba916 WHIRLPOOL 0cb6031c0141e23958e17c430ebcbb4ac9f514115cdbd7b3aafce7bc30b446f4656ccd186b3ecbad242cc6120bd3950695a15f5d3357b7c9d2afd0d65e98744c
+MISC ChangeLog 4877 SHA256 6af8a5595170acd2967a2cbfd63e40b67f0b0950c56d1d54ce3fbd56eb11c477 SHA512 ce21ce856512fe8139eeda45d138e56825bda3350ed518fd04de6e9223e65f5d4962f020356e4e7f67e00c6660f6b069a0419fcdaaf01fa6773f21060f05b88d WHIRLPOOL ad986c056891aee196fdd73b908a670a74c675780bc90c79d1da253a2c5950d0b274cffa5aa374beee4aebb1974a9196a2ea9b99683a6fc3aae5a041ede0cecd
 MISC metadata.xml 680 SHA256 07fbbd7adef595778c3f32fe4b39e6c096bc938ffcffaf8262a74a7eb0f07156 SHA512 89709a7f9d86a274d7825690c26fc347cc716f0fcd816c51d66f69c4a1f5a7dd23dc92794773d78e325825fd023c363f259f112a0cd79027c3e0a3f016017aee WHIRLPOOL cd5d2f626ffd0a1d56093ee54dfdcb840830c1b3d4d3d60fa43cc0b1def4ceab8221cfe0a7eccfdf52a4107caf97a1f58451808cbfc0321852fa173f7da21ad5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlUzMZ8ACgkQso7CE7gHKw0fYgCfQlqgXtJgwbs3T9IqWI3mUFsW
-vkMAn3R4yx1ywmwEJV3/FlBZwvIsHI0w
-=5mGo
+iEYEAREIAAYFAlU0T78ACgkQso7CE7gHKw0pYgCffsm3rWnue8uv+AL/zGWPRo61
+t/MAoK8miesyrh0G91TY9NrnTkpmDKyo
+=xeAV
 -----END PGP SIGNATURE-----
